--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!--defer он поставит бразуер на скачивание скрипта auth.js и продллжит считывание разметки дальше(тк в скрипте идет обращение к  элементам верстки), как только бразер считве всю рамзетку, тогда и запустится скрипт(в нем элементы уже будут доступны)-->
     <script src="js/partners.js" defer></script>
     <script src="js/menu.js" defer></script>
+    <script src="js/cart.js" defer></script>
 </head>
 
 <body>
@@ -36,7 +37,8 @@
                     <span class="button-text">Войти</span>
                 </button>
                 <button class="button button-cart" id="cart-button">
-                    <img class="button-icon" src="img/shopping-cart.svg" width="16" height="24" alt="shopping_button">
+                    <img class="button-icon" src="img/icon/shopping-cart.svg" width="16" height="24"
+                        alt="shopping_button">
                     <span class="button-text">Корзина</span>
                 </button>
                 <button class="button button-primary  button-out">
@@ -66,17 +68,17 @@
 
                 <div class="cards cards-restaurants">
                     <!-- псиок картчоек-->
-                    <a class="card card-restaurant" href="restaurant.html">
-                        <!--картчока-->
+                    <!-- <a class="card card-restaurant" href="restaurant.html">
+                        артчока
                         <img src="img/pizza-plus/preview.jpg" class="card-image" width="384" height="250" alt="card">
                         <div class="card-text">
                             <div class="card-heading">
-                                <!-- флекс контенйер -->
+                                флекс контенйер
                                 <h3 class="card-title">Пицца плюс</h3>
                                 <span class="card-tag tag">30 мин</span>
                             </div>
                             <div class="card-info">
-                                <!-- флекс контенйер -->
+                               флекс контенйер
                                 <div class="rating">
                                     <img class="rating-star" src="img/icon/rating.svg" width="15" height="15"
                                         alt="star">
@@ -86,19 +88,19 @@
                                 <div class="category">Пицца</div>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
 
-                    <a class="card card-restaurant" href="restaurant.html">
-                        <!--картчока-->
+                    <!-- <a class="card card-restaurant" href="restaurant.html">
+                        картчока
                         <img src="img/tanuki/preview.jpg" class="card-image" width="384" height="250" alt="card">
                         <div class="card-text">
                             <div class="card-heading">
-                                <!-- флекс контенйер -->
+                                флекс контенйер 
                                 <h3 class="card-title">Тануки</h3>
                                 <span class="card-tag tag">20 мин</span>
                             </div>
                             <div class="card-info">
-                                <!-- флекс контенйер -->
+                                флекс контенйер 
                                 <div class="rating">
                                     <img class="rating-star" src="img/icon/rating.svg" width="15" height="15"
                                         alt="star">3.5
@@ -107,19 +109,19 @@
                                 <div class="category">Пицца</div>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
 
-                    <a class="card card-restaurant" href="restaurant.html">
-                        <!--картчока-->
+                    <!-- <a class="card card-restaurant" href="restaurant.html">
+                        картчока
                         <img src="img/food-band/preview.jpg" class="card-image" width="384" height="250" alt="card">
                         <div class="card-text">
                             <div class="card-heading">
-                                <!-- флекс контенйер -->
+                                 флекс контенйер 
                                 <h3 class="card-title">FoodBand</h3>
                                 <span class="card-tag tag">10 мин</span>
                             </div>
                             <div class="card-info">
-                                <!-- флекс контенйер -->
+                                флекс контенйер 
                                 <div class="rating">
                                     <img class="rating-star" src="img/icon/rating.svg" width="15" height="15"
                                         alt="star">
@@ -129,19 +131,19 @@
                                 <div class="category">Пицца</div>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
 
-                    <a class="card card-restaurant" href="restaurant.html">
-                        <!-- картчока-->
+                    <!-- <a class="card card-restaurant" href="restaurant.html">
+                        картчока
                         <img src="img/gusi-lebedi/preview.jpg" class="card-image" width="384" height="250" alt="card">
                         <div class="card-text">
                             <div class="card-heading">
-                                <!--флекс контенйер-->
+                                флекс контенйер
                                 <h3 class="card-title">Жадина пицца</h3>
                                 <span class="card-tag tag">90 мин</span>
                             </div>
                             <div class="card-info">
-                                <!--флекс контенйер-->
+                                флекс контенйер
                                 <div class="rating">
                                     <img class="rating-star" src="img/icon/rating.svg" width="15" height="15"
                                         alt="star">
@@ -151,19 +153,19 @@
                                 <div class="category">Пицца</div>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
 
-                    <a class="card card-restaurant" href="restaurant.html">
-                        <!-- картчока-->
+                    <!-- <a class="card card-restaurant" href="restaurant.html">
+                        картчока
                         <img src="img/palki-skalki/preview.jpg" class="card-image" width="384" height="250" alt="card">
                         <div class="card-text">
                             <div class="card-heading">
-                                <!--флекс контенйер-->
+                                флекс контенйер
                                 <h3 class="card-title">Точка еды</h3>
                                 <span class="card-tag tag">30 мин</span>
                             </div>
                             <div class="card-info">
-                                <!--флекс контенйер-->
+                                флекс контенйер
                                 <div class="rating">
                                     <img class="rating-star" src="img/icon/rating.svg" width="15" height="15"
                                         alt="star">
@@ -173,19 +175,19 @@
                                 <div class="category">Пицца</div>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
 
-                    <a class="card card-restaurant" href="restaurant.html">
-                        <!-- картчока-->
+                    <!-- <a class="card card-restaurant" href="restaurant.html">
+                        картчока
                         <img src="img/pizza-burger/preview.jpg" class="card-image" width="384" height="250" alt="card">
                         <div class="card-text">
                             <div class="card-heading">
-                                <!--флекс контенйер-->
+                                флекс контенйер
                                 <h3 class="card-title">Пицца Burger</h3>
                                 <span class="card-tag tag">60 мин</span>
                             </div>
                             <div class="card-info">
-                                <!--флекс контенйер-->
+                                флекс контенйер
                                 <div class="rating">
                                     <img class="rating-star" src="img/icon/rating.svg" width="15" height="15"
                                         alt="star">
@@ -195,7 +197,7 @@
                                 <div class="category">Пицkjklца</div>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
                 </div>
             </section>
 
@@ -404,6 +406,7 @@
 
 
     <div class="modal modal-cart">
+        <!--окно корзины-->
         <div class="modal-dialog">
             <!-- само модальое окно-->
             <div class="modal-header">
