--- a/restaurant.html
+++ b/restaurant.html
@@ -11,10 +11,12 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/wow.min.js" defer></script>
+    <script src="./dist/menu.js" defer></script>
+    <!-- <script src="js/wow.min.js" defer></script>
     <script src="js/auth.js" defer></script>
-    <script src="js/menu.js" defer></script>
-    <script src="js/cart.js" defer></script>
+    <script src="js/menu.js" defer></script> 
+    <script src="js/cart.js" defer></script> -->
+    <!--после сборки вебпаком, подключам этот полученный фал-->
 </head>
 
 <body>
@@ -62,42 +64,43 @@
 
                 <ul class="cards cards-menu">
                     <!-- псиок картчоек-->
-                    <!-- <li class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
-                       картчока
-                    <img src="img/pizza-plus/pizza-classic.jpg" class="card-image" width="384" height="213" alt="dish1">
-                    <div class="card-text card-text1">
-                        <div class="card-heading">
-                           флекс контенйер
-                            <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
+                    <li class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.2s">
+                        <!-- картчока-->
+                        <img src="img/pizza-plus/pizza-classic.jpg" class="card-image" width="384" height="213"
+                            alt="dish1">
+                        <div class="card-text card-text1">
+                            <div class="card-heading">
+                                <!--флекс контенйер-->
+                                <h3 class="card-title card-title-reg">Ролл угорь стандарт</h3>
+                            </div>
+                            <div class="card-info">
+                                <!--флекс контенйер-->
+                                <div class="ingredients">Рис, угорь, соус унаги, кунжут, водоросли нори.</div>
+                            </div>
+                            <div class="card-buttons">
+                                <button class="button button-primary">
+                                    <span class="button-card-text">В корзину</span>
+                                    <img class="button-card-image" src="img/icon/shopping-cart-white.svg" width="16"
+                                        height="24" alt="user_button">
+                                </button>
+                                <strong class="card-price-bold">
+                                    250 ₽
+                                </strong>
+                            </div>
                         </div>
-                        <div class="card-info">
-                          флекс контенйер
-                            <div class="ingredients">Рис, угорь, соус унаги, кунжут, водоросли нори.</div>
-                        </div>
-                        <div class="card-buttons">
-                            <button class="button button-primary">
-                                <span class="button-card-text">В корзину</span>
-                                <img class="button-card-image" src="img/icon/shopping-cart-white.svg" width="16"
-                                    height="24" alt="user_button">
-                            </button>
-                            <strong class="card-price-bold">
-                                250 ₽
-                            </strong>
-                        </div>
-                    </div>
                     </li>
 
                     <li class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
-                      картчока
+                        <!-- картчока-->
                         <img src="img/pizza-plus/pizza-girls.jpg" class="card-image" width="384" height="213"
                             alt="dish2">
                         <div class="card-text card-text1">
                             <div class="card-heading">
-                              флекс контенйер
+                                <!--флекс контенйер-->
                                 <h3 class="card-title card-title-reg">Калифорния лосось стандарт</h3>
                             </div>
                             <div class="card-info">
-                                флекс контенйер
+                                <!--флекс контенйер-->
                                 <div class="ingredients">Рис, лосось, авокадо, огурец, майонез, икра масаго, водоросли
                                     нори.</div>
                             </div>
@@ -115,43 +118,43 @@
                     </li>
 
                     <li class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
-                        картчока
-                    <img src="img/pizza-plus/pizza-hawaiian.jpg" class="card-image" width="384" height="213"
-                        alt="dish3">
-                    <div class="card-text card-text1">
-                        <div class="card-heading">
-                            флекс контенйер
-                            <h3 class="card-title card-title-reg">Окинава стандарт</h3>
-                        </div>
-                        <div class="card-info">
-                            флекс контенйер
-                            <div class="ingredients"> Рис, креветка отварная, сыр сливочный, лосось, огурец свежий
+                        <!-- картчока-->
+                        <img src="img/pizza-plus/pizza-hawaiian.jpg" class="card-image" width="384" height="213"
+                            alt="dish3">
+                        <div class="card-text card-text1">
+                            <div class="card-heading">
+                                <!--флекс контенйер-->
+                                <h3 class="card-title card-title-reg">Окинава стандарт</h3>
+                            </div>
+                            <div class="card-info">
+                                <!--флекс контенйер-->
+                                <div class="ingredients"> Рис, креветка отварная, сыр сливочный, лосось, огурец свежий
+                                </div>
+                            </div>
+                            <div class="card-buttons">
+                                <button class="button button-primary">
+                                    <span class="button-card-text">В корзину</span>
+                                    <img class="button-card-image" src="img/icon/shopping-cart-white.svg" width="16"
+                                        height="24" alt="user_button">
+                                </button>
+                                <strong class="card-price-bold">
+                                    250 ₽
+                                </strong>
                             </div>
                         </div>
-                        <div class="card-buttons">
-                            <button class="button button-primary">
-                                <span class="button-card-text">В корзину</span>
-                                <img class="button-card-image" src="img/icon/shopping-cart-white.svg" width="16"
-                                    height="24" alt="user_button">
-                            </button>
-                            <strong class="card-price-bold">
-                                250 ₽
-                            </strong>
-                        </div>
-                    </div>
                     </li>
 
                     <li class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
-                        картчока
+                        <!-- картчока-->
                         <img src="img/pizza-plus/pizza-hawaiian.jpg" class="card-image" width="384" height="213"
                             alt="dish4">
                         <div class="card-text card-text1">
                             <div class="card-heading">
-                                флекс контенйер
+                                <!--флекс контенйер-->
                                 <h3 class="card-title card-title-reg">Цезарь маки хl</h3>
                             </div>
                             <div class="card-info">
-                                флекс контенйер
+                                <!--флекс контенйер-->
                                 <div class="ingredients">Рис, куриная грудка копченая, икра масаго, томат, айсберг, соус
                                     цезарь...</div>
                             </div>
@@ -169,16 +172,16 @@
                     </li>
 
                     <li class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
-                        картчока
+                        <!-- картчока-->
                         <img src="img/pizza-plus/pizza-oleole.jpg" class="card-image" width="384" height="213"
                             alt="dish5">
                         <div class="card-text card-text1">
                             <div class="card-heading">
-                                флекс контенйер
+                                <!--флекс контенйер-->
                                 <h3 class="card-title card-title-reg">Ролл с креветкой стандарт</h3>
                             </div>
                             <div class="card-info">
-                               флекс контенйер
+                                <!--флекс контенйер-->
                                 <div class="ingredients">Рис, помидор свежий, перец болгарский, авокадо, огурец, айсберг
                                 </div>
                             </div>
@@ -196,16 +199,16 @@
                     </li>
 
                     <li class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.4s">
-                        картчока
+                        <!-- картчока-->
                         <img src="img/pizza-plus/pizza-vesuvius.jpg" class="card-image" width="384" height="213"
                             alt="dish6">
                         <div class="card-text card-text1">
                             <div class="card-heading">
-                                флекс контенйер
+                                <!--флекс контенйер-->
                                 <h3 class="card-title card-title-reg">Ролл с креветкой стандарт</h3>
                             </div>
                             <div class="card-info">
-                                флекс контенйер
+                                <!--флекс контенйер-->
                                 <div class="ingredients">Рис, водоросли нори, креветки отварные, сыр сливочный, огурцы
                                 </div>
                             </div>
@@ -220,7 +223,7 @@
                                 </strong>
                             </div>
                         </div>
-                    </li> -->
+                    </li>
                 </ul>
             </section>
         </div>
