--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="./dist/main.js" defer></script>
-    <!--после сборки  вебпаком подключли только этот полученный файл-->
-    <!-- <script src="js/wow.min.js" defer></script> -->
-    <!-- <script src="https://unpkg.com/swiper@7/swiper-bundle.esm.browser.min.js" defer></script>  подключить дял верси без вебпака-->
-    <!-- <script src="js/auth.js" defer></script>
-   defer он поставит бразуер на скачивание скрипта auth.js и продллжит считывание разметки(рамзетку читает интерпретартор) дальше(тк в скрипте идет обращение к  элементам верстки), как только бразер считве всю рамзетку, тогда и запустится скрипт(в нем элементы уже будут доступны)
+    <script src="js/wow.min.js" defer></script> 
+     <script src="https://unpkg.com/swiper@7/swiper-bundle.esm.browser.min.js" defer></script>  
+    <script src="js/auth.js" defer></script>
+   <!--defer он поставит бразуер на скачивание скрипта auth.js и продллжит считывание разметки(рамзетку читает интерпретартор) дальше(тк в скрипте идет обращение к  элементам верстки), как только бразер считве всю рамзетку, тогда и запустится скрипт(в нем элементы уже будут доступны)-->
     <script src="js/partners.js" defer></script>
-    <script src="js/menu.js" defer></script> -->
+    <script src="js/menu.js" defer></script> 
 </head>
 
 <body>
