--- a/restaurant.html
+++ b/restaurant.html
@@ -11,12 +11,10 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="./dist/menu.js" defer></script>
-    <!-- <script src="js/wow.min.js" defer></script>
+    <script src="js/wow.min.js" defer></script>
     <script src="js/auth.js" defer></script>
     <script src="js/menu.js" defer></script> 
-    <script src="js/cart.js" defer></script> -->
-    <!--после сборки вебпаком, подключам этот полученный фал-->
+    <script src="js/cart.js" defer></script> 
 </head>
 
 <body>
