--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <title>Delivery Food - бесплатная доставка еды на дом</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap&subset=cyrillic"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/wow.min.js" defer></script> 
-     <script src="https://unpkg.com/swiper@7/swiper-bundle.esm.browser.min.js" defer></script>  
+    <script src="js/wow.min.js" defer></script>
     <script src="js/auth.js" defer></script>
-   <!--defer он поставит бразуер на скачивание скрипта auth.js и продллжит считывание разметки(рамзетку читает интерпретартор) дальше(тк в скрипте идет обращение к  элементам верстки), как только бразер считве всю рамзетку, тогда и запустится скрипт(в нем элементы уже будут доступны)-->
+    <!--defer он поставит бразуер на скачивание скрипта auth.js и продллжит считывание разметки дальше(тк в скрипте идет обращение к  элементам верстки), как только бразер считве всю рамзетку, тогда и запустится скрипт(в нем элементы уже будут доступны)-->
     <script src="js/partners.js" defer></script>
-    <script src="js/menu.js" defer></script> 
+
+    <script src="js/cart.js" defer></script>
 </head>
 
 <body>
@@ -38,7 +37,8 @@
                     <span class="button-text">Войти</span>
                 </button>
                 <button class="button button-cart" id="cart-button">
-                    <img class="button-icon" src="img/shopping-cart.svg" width="16" height="24" alt="shopping_button">
+                    <img class="button-icon" src="img/icon/shopping-cart.svg" width="16" height="24"
+                        alt="shopping_button">
                     <span class="button-text">Корзина</span>
                 </button>
                 <button class="button button-primary  button-out">
@@ -50,54 +50,35 @@
 
     <main class="main">
         <div class="container">
-            <section class="container-promo swiper">
-                <div class="swiper-wrapper">
-                    <section class="promo pizza swiper-slide">
-                        <h1 class="promo-title">Онлайн-сервис<br> доставки еды на дом</h1>
-                        <p class="promo-text">
-                            Блюда из любимого ресторана привезет курьер в перчатках, маске и с антисептиком
-                        </p>
-                    </section>
-
-                    <section class="promo kebab swiper-slide">
-                        <h1 class="promo-title">шашлыки на майские<br> со скидкой 35</h1>
-                        <p class="promo-text">
-                            закажите шаглыки в любом ресторане
-                        </p>
-                    </section>
-
-                    <section class="promo vegetables swiper-slide">
-                        <h1 class="promo-title">скидка 25 на всю еду</h1>
-                        <p class="promo-text">
-                            Блюда из ресторана приаезут вместе с двумя подарочными
-                        </p>
-                    </section>
-                    <div class="swiper-button-prev"></div>
-                    <!--стрелк  дял слайда-->
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-pagination"></div>
-                </div>
+            <section class="container-promo">
+                <section class="promo">
+                    <h1 class="promo-title">Онлайн-сервис<br> доставки еды на дом</h1>
+                    <p class="promo-text">
+                        Блюда из любимого ресторана привезет курьер в перчатках, маске и с антисептиком
+                    </p>
+                </section>
             </section>
 
             <section class="restaraunts">
                 <div class="section-heading">
+                    <!-- -->
                     <h2 class="section-title">Рестораны</h2>
                     <input type="search" class="input input-search" placeholder="Поиск блюд и ресторанов">
                 </div>
 
                 <div class="cards cards-restaurants">
                     <!-- псиок картчоек-->
-                    <a class="card card-restaurant" href="restaurant.html">
-                        <!--картчока-->
+                    <!-- <a class="card card-restaurant" href="restaurant.html">
+                        артчока
                         <img src="img/pizza-plus/preview.jpg" class="card-image" width="384" height="250" alt="card">
                         <div class="card-text">
                             <div class="card-heading">
-                                <!-- флекс контенйер -->
+                                флекс контенйер
                                 <h3 class="card-title">Пицца плюс</h3>
                                 <span class="card-tag tag">30 мин</span>
                             </div>
                             <div class="card-info">
-                                <!-- флекс контенйер -->
+                               флекс контенйер
                                 <div class="rating">
                                     <img class="rating-star" src="img/icon/rating.svg" width="15" height="15"
                                         alt="star">
@@ -107,19 +88,19 @@
                                 <div class="category">Пицца</div>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
 
-                    <a class="card card-restaurant" href="restaurant.html">
-                        <!--картчока-->
+                    <!-- <a class="card card-restaurant" href="restaurant.html">
+                        картчока
                         <img src="img/tanuki/preview.jpg" class="card-image" width="384" height="250" alt="card">
                         <div class="card-text">
                             <div class="card-heading">
-                                <!-- флекс контенйер -->
+                                флекс контенйер 
                                 <h3 class="card-title">Тануки</h3>
                                 <span class="card-tag tag">20 мин</span>
                             </div>
                             <div class="card-info">
-                                <!-- флекс контенйер -->
+                                флекс контенйер 
                                 <div class="rating">
                                     <img class="rating-star" src="img/icon/rating.svg" width="15" height="15"
                                         alt="star">3.5
@@ -128,19 +109,19 @@
                                 <div class="category">Пицца</div>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
 
-                    <a class="card card-restaurant" href="restaurant.html">
-                        <!--картчока-->
+                    <!-- <a class="card card-restaurant" href="restaurant.html">
+                        картчока
                         <img src="img/food-band/preview.jpg" class="card-image" width="384" height="250" alt="card">
                         <div class="card-text">
                             <div class="card-heading">
-                                <!-- флекс контенйер -->
+                                 флекс контенйер 
                                 <h3 class="card-title">FoodBand</h3>
                                 <span class="card-tag tag">10 мин</span>
                             </div>
                             <div class="card-info">
-                                <!-- флекс контенйер -->
+                                флекс контенйер 
                                 <div class="rating">
                                     <img class="rating-star" src="img/icon/rating.svg" width="15" height="15"
                                         alt="star">
@@ -150,19 +131,19 @@
                                 <div class="category">Пицца</div>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
 
-                    <a class="card card-restaurant" href="restaurant.html">
-                        <!-- картчока-->
+                    <!-- <a class="card card-restaurant" href="restaurant.html">
+                        картчока
                         <img src="img/gusi-lebedi/preview.jpg" class="card-image" width="384" height="250" alt="card">
                         <div class="card-text">
                             <div class="card-heading">
-                                <!--флекс контенйер-->
+                                флекс контенйер
                                 <h3 class="card-title">Жадина пицца</h3>
                                 <span class="card-tag tag">90 мин</span>
                             </div>
                             <div class="card-info">
-                                <!--флекс контенйер-->
+                                флекс контенйер
                                 <div class="rating">
                                     <img class="rating-star" src="img/icon/rating.svg" width="15" height="15"
                                         alt="star">
@@ -172,19 +153,19 @@
                                 <div class="category">Пицца</div>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
 
-                    <a class="card card-restaurant" href="restaurant.html">
-                        <!-- картчока-->
+                    <!-- <a class="card card-restaurant" href="restaurant.html">
+                        картчока
                         <img src="img/palki-skalki/preview.jpg" class="card-image" width="384" height="250" alt="card">
                         <div class="card-text">
                             <div class="card-heading">
-                                <!--флекс контенйер-->
+                                флекс контенйер
                                 <h3 class="card-title">Точка еды</h3>
                                 <span class="card-tag tag">30 мин</span>
                             </div>
                             <div class="card-info">
-                                <!--флекс контенйер-->
+                                флекс контенйер
                                 <div class="rating">
                                     <img class="rating-star" src="img/icon/rating.svg" width="15" height="15"
                                         alt="star">
@@ -194,19 +175,19 @@
                                 <div class="category">Пицца</div>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
 
-                    <a class="card card-restaurant" href="restaurant.html">
-                        <!-- картчока-->
+                    <!-- <a class="card card-restaurant" href="restaurant.html">
+                        картчока
                         <img src="img/pizza-burger/preview.jpg" class="card-image" width="384" height="250" alt="card">
                         <div class="card-text">
                             <div class="card-heading">
-                                <!--флекс контенйер-->
+                                флекс контенйер
                                 <h3 class="card-title">Пицца Burger</h3>
                                 <span class="card-tag tag">60 мин</span>
                             </div>
                             <div class="card-info">
-                                <!--флекс контенйер-->
+                                флекс контенйер
                                 <div class="rating">
                                     <img class="rating-star" src="img/icon/rating.svg" width="15" height="15"
                                         alt="star">
@@ -216,7 +197,7 @@
                                 <div class="category">Пицkjklца</div>
                             </div>
                         </div>
-                    </a>
+                    </a> -->
                 </div>
             </section>
 
@@ -425,6 +406,7 @@
 
 
     <div class="modal modal-cart">
+        <!--окно корзины-->
         <div class="modal-dialog">
             <!-- само модальое окно-->
             <div class="modal-header">
